tests/snapshots/parser_snapshots__parameter_expansion__alternate_value.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"echo ${var:+alternate}\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    ParameterExpansion(
                        "var:+alternate",
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
